--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
   implementation "com.google.code.gson:gson:$gson_version"
   implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
   implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+  implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 
   //RxJava
   implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
