--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,70 +5,70 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-  compileSdkVersion 28
-  defaultConfig {
-    applicationId "com.hello.homecreditchallenge"
-    minSdkVersion 19
-    targetSdkVersion 28
-    versionCode 3333
-    versionName "3.3"
-    vectorDrawables.useSupportLibrary = true
-    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    buildConfigField("String", "OPEN_WEATHER_APP_ID", "4dd9f5cfb2b4db77be919ca7e7007163")
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    signingConfigs {
+        release {
+            keyAlias 'homecredit'
+            keyPassword 'homecredit'
+            storeFile file('../keystore/keystore.jks')
+            storePassword 'homecredit'
+        }
     }
-  }
+    compileSdkVersion 28
+    defaultConfig {
+        applicationId "com.hello.homecreditchallenge"
+        minSdkVersion 19
+        targetSdkVersion 28
+        versionCode 3333
+        versionName "3.3"
+        vectorDrawables.useSupportLibrary = true
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "OPEN_WEATHER_APP_ID", "\"4dd9f5cfb2b4db77be919ca7e7007163\"")
+    }
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+    }
 }
 
 dependencies {
-  def lifecycle_version = "2.0.0"
-  def retrofit_version = "2.5.0"
-  def gson_version = "2.8.5"
-  def rxjava_version = "2.2.4"
-  def rxandroid_version = "2.1.0"
-  def glide_version = "4.8.0"
-  def material_values_version = "1.1.1"
-  def anko_version = "0.10.8"
-
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
-  //LifeCycle
-  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-  implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-
-  //Retrofit
-  implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-  implementation "com.google.code.gson:gson:$gson_version"
-  implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-  implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-  implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
-
-  //RxJava
-  implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
-  implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
-
-  //Anko
-  implementation "org.jetbrains.anko:anko:$anko_version"
-
-  //Glide
-  implementation "com.github.bumptech.glide:glide:$glide_version"
-
-  //Support
-  implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
-  implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
-  implementation 'com.google.android.material:material:1.1.0-alpha02'
-
-  //Others
-  implementation "blue.aodev:material-values:$material_values_version"
-
-  //Testing
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'androidx.test:runner:1.1.1'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-  implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    def lifecycle_version = "2.0.0"
+    def retrofit_version = "2.5.0"
+    def gson_version = "2.8.5"
+    def rxjava_version = "2.2.4"
+    def rxandroid_version = "2.1.0"
+    def glide_version = "4.8.0"
+    def material_values_version = "1.1.1"
+    def anko_version = "0.10.8"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //LifeCycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
+    //RxJava
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+    //Anko
+    implementation "org.jetbrains.anko:anko:$anko_version"
+    //Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    //Support
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    implementation 'com.google.android.material:material:1.1.0-alpha02'
+    //Others
+    implementation "blue.aodev:material-values:$material_values_version"
+    //Testing
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
